force-app/main/default/objects/Forrester_SHIR_CASE_CRDR_MATTER__x/Forrester_SHIR_CASE_CRDR_MATTER__x.object-meta.xml
<CustomObject>
    <description>Forrester_SHIR_CASE_CRDR_MATTER</description>
    <externalDataSource>Forrester</externalDataSource>
    <externalName>Forrester_SHIR_CASE_CRDR_MATTER</externalName>
    <label>Forrester_SHIR_CASE_CRDR_MATTER</label>
    <pluralLabel>Forrester_SHIR_CASE_CRDR_MATTER</pluralLabel>
</CustomObject>