force-app/main/default/objects/Forrester_SHIR_CASE_CRDR_MATTER__x/fields/CASE_CRDR_MATTER_RECID__c.field-meta.xml
<CustomField>
    <fullName>CASE_CRDR_MATTER_RECID__c</fullName>
    <description>CASE_CRDR_MATTER_RECID</description>
    <externalDeveloperName>CASE_CRDR_MATTER_RECID</externalDeveloperName>
    <label>Case CRDR Matter Recid</label>
    <length>24</length>
    <type>Text</type>
</CustomField>