force-app/main/default/objects/Forrester_SHIR_CASE_CRDR_MATTER__x/fields/MATTER_RESERVE_INTENDED__c.field-meta.xml
<CustomField>
    <fullName>MATTER_RESERVE_INTENDED__c</fullName>
    <description>MATTER_RESERVE_INTENDED</description>
    <externalDeveloperName>MATTER_RESERVE_INTENDED</externalDeveloperName>
    <label>Matter Reserve Intented</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>