force-app/main/default/objects/Forrester_SHIR_CASE_CRDR_MATTER__x/fields/MATTER_WITHHOLDING__c.field-meta.xml
<CustomField>
    <fullName>MATTER_WITHHOLDING__c</fullName>
    <description>MATTER_WITHHOLDING</description>
    <externalDeveloperName>MATTER_WITHHOLDING</externalDeveloperName>
    <label>Matter Withholding</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>