force-app/main/default/objects/Forrester_SHIR_CASE_CRDR_MATTER__x/fields/OUTSIDE_MATTER_NUM__c.field-meta.xml
<CustomField>
    <fullName>OUTSIDE_MATTER_NUM__c</fullName>
    <description>OUTSIDE_MATTER_NUM</description>
    <externalDeveloperName>OUTSIDE_MATTER_NUM</externalDeveloperName>
    <label>Outside Matter</label>
    <length>10</length>
    <type>Text</type>
</CustomField>