force-app/main/default/objects/Forrester_SHIR_CASE_CRDR_MATTER__x/fields/OUTSIDE_MATTER_RECID__c.field-meta.xml
<CustomField>
    <fullName>OUTSIDE_MATTER_RECID__c</fullName>
    <description>OUTSIDE_MATTER_RECID</description>
    <externalDeveloperName>OUTSIDE_MATTER_RECID</externalDeveloperName>
    <label>Outside Matter RecId</label>
    <length>24</length>
    <referenceTo>Forrester_SHIR_OUTSIDE_MATTER_VIEW__x</referenceTo>
    <relationshipLabel>Forrester_SHIR_CASE_CRDR_MATTER</relationshipLabel>
    <relationshipName>Forrester_SHIR_CASE_CRDR_MATTER</relationshipName>
    <type>ExternalLookup</type>
</CustomField>