force-app/main/default/objects/Forrester_SHIR_CASE_CRDR_MATTER__x/fields/WITHHOLDING_COSTS__c.field-meta.xml
<CustomField>
    <fullName>WITHHOLDING_COSTS__c</fullName>
    <description>WITHHOLDING_COSTS</description>
    <externalDeveloperName>WITHHOLDING_COSTS</externalDeveloperName>
    <label>Withholding Costs</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>