force-app/main/default/objects/Forrester_SHIR_CASE_CRDR_MATTER__x/fields/WITHHOLDING_PERCENT__c.field-meta.xml
<CustomField>
    <fullName>WITHHOLDING_PERCENT__c</fullName>
    <description>WITHHOLDING_PERCENT</description>
    <externalDeveloperName>WITHHOLDING_PERCENT</externalDeveloperName>
    <label>Withholding Percent</label>
    <precision>11</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>