force-app/main/default/objects/Forrester_SHIR_CASE_CRDR_MATTER__x/fields/WITHHOLDING_PRIOR__c.field-meta.xml
<CustomField>
    <fullName>WITHHOLDING_PRIOR__c</fullName>
    <description>WITHHOLDING_PRIOR</description>
    <externalDeveloperName>WITHHOLDING_PRIOR</externalDeveloperName>
    <label>Withholding Prior</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>