force-app/main/default/objects/Forrester_SHIR_CASE_CRDR_MATTER__x/fields/WITHHOLDING_REIMBURSEMENT__c.field-meta.xml
<CustomField>
    <fullName>WITHHOLDING_REIMBURSEMENT__c</fullName>
    <description>WITHHOLDING_REIMBURSEMENT</description>
    <externalDeveloperName>WITHHOLDING_REIMBURSEMENT</externalDeveloperName>
    <label>Withholding Reimbursement</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>