force-app/main/default/objects/Forrester_SHIR_CASE_CRDR_MATTER__x/fields/WITHHOLDING_UNREIMB__c.field-meta.xml
<CustomField>
    <fullName>WITHHOLDING_UNREIMB__c</fullName>
    <description>WITHHOLDING_UNREIMB</description>
    <externalDeveloperName>WITHHOLDING_UNREIMB</externalDeveloperName>
    <label>Withholding Unreimbursed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>